--- a/git-start.html
+++ b/git-start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="euc-kr" />
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -9,6 +9,6 @@
   <body>
     <h1>git start</h1>
     <h2>222</h2>
-    <h3>»ï»ï</h3>
+    <h3>git ì—°ìŠµì´ë¹ˆë‹¤.</h3>
   </body>
 </html>
